# glslang

./: CMakeLists.txt  HOWTO-build-wasm.md
SPIRV/: CMakeLists.txt  GlslangToSpv.cpp  Logger.cpp  Logger.h  SpvBuilder.cpp  SpvBuilder.h  SpvPostProcess.cpp
StandAlone/: CMakeLists.txt  ResourceLimits.cpp  StandAlone.cpp  glslang.js.cpp  hello.cpp
Test/baseResults/: 300samplerExternal.frag.out  300samplerExternalYUV.frag.out  310.comp.out  310.frag.out  310.geom.out  310.tesc.out  310.tese.out  310.vert.out  size  spv.310.comp.out  spv.specConstant.vert.out
glslang/: CMakeLists.txt  glslang.js.cpp
glslang/Include/: BaseTypes.h  Common.h  ConstantUnion.h  Types.h  intermediate.h
glslang/MachineIndependent/: Constant.cpp  Initialize.cpp  Intermediate.cpp  LiveTraverser.h  ParseContextBase.cpp  ParseHelper.cpp  ParseHelper.h  Scan.cpp  ShaderLang.cpp  SymbolTable.cpp  SymbolTable.h  Versions.cpp  Versions.h  attribute.cpp  attribute.h  gl_types.h  glslang.y  glslang_tab.cpp  glslang_tab.cpp.h  iomapper.cpp  iomapper.h  limits.cpp  linkValidate.cpp  localintermediate.h  parseConst.cpp  parseVersions.h  propagateNoContraction.cpp
glslang/MachineIndependent/preprocessor/: Pp.cpp  PpContext.h  PpScanner.cpp  PpTokens.cpp
glslang/Public/: ShaderLang.h
